Fixed loading screen not showing on tank replays

--- a/team_not_found/games/tanks/static/replay.css
+++ b/team_not_found/games/tanks/static/replay.css
@@ -17,6 +17,10 @@
     margin-top: 20%;
 }
 
+#main {
+    float: left;
+}
+
 #setup, #field {
     border: 1px solid black;
     float: left;
